# string-format-hs

./: CHANGELOG.md  LICENSE  README.md  string-format.cabal
src/Data/String/: Format.hs
test/: Main.hs
